# elion

./: README.md  test_dependencies.repos
.github/workflows/: industrial_ci_action.yml
doc/: .gitignore  rotational_derivatives.py
doc/html/: bounds_8cpp.html  bounds_8cpp__incl.md5  bounds_8h.html  bounds_8h__incl.map  bounds_8h_source.html  classelion_1_1AngleAxisConstraint__inherit__graph.md5  classelion_1_1BaseConstraint-members.html  classelion_1_1BaseConstraint.html  classelion_1_1BaseConstraint__inherit__graph.md5  classelion_1_1MoveItCollisionChecker-members.html  classelion_1_1MoveItCollisionChecker.html  classelion_1_1MoveItCollisionChecker__inherit__graph.map  classelion_1_1PoseConstraints-members.html  classelion_1_1PoseConstraints.html  classelion_1_1PoseConstraints__inherit__graph.map  classelion_1_1RPYConstraints-members.html  classelion_1_1RPYConstraints__inherit__graph.md5  collision__checking_8h.html  collision__checking_8h__dep__incl.md5  collision__checking_8h__incl.map  collision__checking_8h__incl.md5  collision__checking_8h_source.html  constraint_8cpp.html  constraint_8cpp__incl.map  constraint_8cpp_source.html  constraint_8h__incl.map  constraint_8h__incl.md5  constraint_8h_source.html  conversions_8cpp.html  conversions_8cpp__incl.map  conversions_8cpp__incl.md5  conversions_8cpp_source.html  conversions_8h__dep__incl.md5  conversions_8h__incl.map  conversions_8h_source.html  dir_000004_000002.html  dir_93334827559d8832c18eb607a61413f3.html  dir_93334827559d8832c18eb607a61413f3_dep.map  dir_93334827559d8832c18eb607a61413f3_dep.md5  dir_9634ceb6633ac5ced595b43e15663dd1_dep.map  (+41 more)
docs/: manifest.yaml
docs/html/: annotated.html  bounds_8cpp__incl.map  bounds_8cpp_source.html  bounds_8h__dep__incl.map  bounds_8h__dep__incl.md5  bounds_8h__incl.md5  classTestConstraints-members.html  classTestConstraints.html  classTestConstraints__inherit__graph.map  classTestConstraints__inherit__graph.md5  classelion_1_1AngleAxisConstraint-members.html  classelion_1_1AngleAxisConstraint.html  classelion_1_1AngleAxisConstraint__inherit__graph.map  classelion_1_1BaseConstraint__inherit__graph.map  classelion_1_1ElionPlanner-members.html  classelion_1_1ElionPlanner.html  classelion_1_1MoveItCollisionChecker__inherit__graph.md5  classelion_1_1PoseConstraints__inherit__graph.md5  classelion_1_1PositionConstraint-members.html  classelion_1_1PositionConstraint.html  classelion_1_1PositionConstraint__inherit__graph.map  classelion_1_1PositionConstraint__inherit__graph.md5  classelion_1_1RPYConstraints.html  classelion_1_1RPYConstraints__inherit__graph.map  classelion_1_1TSStateStorage-members.html  classelion_1_1TSStateStorage.html  classes.html  collision__checking_8cpp.html  collision__checking_8cpp__incl.map  collision__checking_8cpp__incl.md5  collision__checking_8cpp_source.html  collision__checking_8h__dep__incl.map  constraint_8cpp__incl.md5  constraint_8h.html  constraint_8h__dep__incl.map  constraint_8h__dep__incl.md5  conversions_8h.html  conversions_8h__dep__incl.map  conversions_8h__incl.md5  dir_000001_000002.html  (+39 more)
elion_examples/: CMakeLists.txt  package.xml
elion_examples/config/: kuka_1.json  kuka_2.json  kuka_3.json  kuka_aa_con.json  kuka_collision_2.json  kuka_pos_con.json  kuka_rpy_con.json  kuka_x_pos_con.json  panda_1.json  panda_2.json  panda_collision_aa_con.json  panda_collision_pos_con.json  panda_collision_pos_con_2.json  panda_pos_and_aa_con.json  panda_pos_con.json  panda_x_pos_con.json  ur5_pos_con.json  ur5_pos_con_2.json  ur5_pos_con_3.json  welding_example.json  welding_example_collision.json
elion_examples/include/elion_examples/: json_util.h  rviz_util.h  util.h
elion_examples/launch/: constraint_sampling.launch  kuka_x_pos_example.launch  panda.rviz  panda_example.launch  panda_example_2.launch  psm_example.launch  run_example.launch
elion_examples/scripts/: publish_collision_scene.py
elion_examples/src/: json_util.cpp  kuka_example_with_collision.cpp  panda_example.cpp  panda_example_2.cpp  panda_example_with_collision.cpp  psm_minimal_example.cpp  run_example.cpp  rviz_util.cpp  util.cpp  visualize_ompl_constraints.cpp  welding_example.cpp
elion_examples/urdf/collision_scenes/: boxes.urdf  panda_1.urdf
elion_moveit_plugin/: CMakeLists.txt  elion_interface_description.xml  package.xml
elion_moveit_plugin/include/elion_moveit_plugin/: elion_planning_context.h
elion_moveit_plugin/src/: elion_planner_manager.cpp  elion_planning_context.cpp
elion_planner/: CMakeLists.txt  package.xml
elion_planner/include/elion_planner/: bounds.h  collision_checking.h  constraint.h  conversions.h  msg_parsing.h  planner.h  threadsafe_state_storage.h
elion_planner/src/: bounds.cpp  collision_checking.cpp  constraint.cpp  conversions.cpp  msg_parsing.cpp  planner.cpp  threadsafe_state_storage.cpp
elion_planner/test/: test_constraints.cpp  test_constraints_kuka_kr5.rostest  test_constraints_panda.rostest  test_conversions.cpp  test_position_constraint.cpp
